Package_Tools/include-C/ssh/libssh_xxxx/libssh.h

  typedef unsigned int uint32_t;
typedef struct ssh_buffer_struct* ssh_buffer;
typedef struct ssh_session_struct* ssh_session;
typedef struct ssh_event_struct* ssh_event;
typedef struct ssh_connector_struct * ssh_connector;
typedef SOCKET socket_t;
typedef int socket_t;
typedef int (*ssh_event_callback)(socket_t fd, int revents, void *userdata);
extern ssh_event ssh_event_new(void);
extern int ssh_event_add_fd(ssh_event event, socket_t fd, short events,
                                    ssh_event_callback cb, void *userdata);
extern int ssh_event_add_session(ssh_event event, ssh_session session);
extern int ssh_event_add_connector(ssh_event event, ssh_connector connector);
extern int ssh_event_dopoll(ssh_event event, int timeout);
extern int ssh_event_remove_fd(ssh_event event, socket_t fd);
extern int ssh_event_remove_session(ssh_event event, ssh_session session);
extern int ssh_event_remove_connector(ssh_event event, ssh_connector connector);
extern void ssh_event_free(ssh_event event);
extern const char* ssh_get_clientbanner(ssh_session session);
extern const char* ssh_get_serverbanner(ssh_session session);
extern const char* ssh_get_kex_algo(ssh_session session);
extern const char* ssh_get_cipher_in(ssh_session session);
extern const char* ssh_get_cipher_out(ssh_session session);
extern const char* ssh_get_hmac_in(ssh_session session);
extern const char* ssh_get_hmac_out(ssh_session session);
extern ssh_buffer ssh_buffer_new(void);
extern void ssh_buffer_free(ssh_buffer buffer);
extern int ssh_buffer_reinit(ssh_buffer buffer);
extern int ssh_buffer_add_data(ssh_buffer buffer, const void *data, uint32_t len);
extern uint32_t ssh_buffer_get_data(ssh_buffer buffer, void *data, uint32_t requestedlen);
extern void *ssh_buffer_get(ssh_buffer buffer);
extern uint32_t ssh_buffer_get_len(ssh_buffer buffer);
extern int ssh_session_set_disconnect_message(ssh_session session, const char *message);