Packages_2024/libssh_0.10.6/libssh/libssh_.inc


function ssh_event_new: Tssh_event; cdecl; external libssh;
function ssh_event_add_fd(event: Tssh_event; fd: Tsocket_t; events: smallint; cb: Tssh_event_callback; userdata: pointer): longint; cdecl; external libssh;
function ssh_event_add_session(event: Tssh_event; session: Tssh_session): longint; cdecl; external libssh;
function ssh_event_add_connector(event: Tssh_event; connector: Tssh_connector): longint; cdecl; external libssh;
function ssh_event_dopoll(event: Tssh_event; timeout: longint): longint; cdecl; external libssh;
function ssh_event_remove_fd(event: Tssh_event; fd: Tsocket_t): longint; cdecl; external libssh;
function ssh_event_remove_session(event: Tssh_event; session: Tssh_session): longint; cdecl; external libssh;
function ssh_event_remove_connector(event: Tssh_event; connector: Tssh_connector): longint; cdecl; external libssh;
procedure ssh_event_free(event: Tssh_event); cdecl; external libssh;
function ssh_get_clientbanner(session: Tssh_session): pchar; cdecl; external libssh;
function ssh_get_serverbanner(session: Tssh_session): pchar; cdecl; external libssh;
function ssh_get_kex_algo(session: Tssh_session): pchar; cdecl; external libssh;
function ssh_get_cipher_in(session: Tssh_session): pchar; cdecl; external libssh;
function ssh_get_cipher_out(session: Tssh_session): pchar; cdecl; external libssh;
function ssh_get_hmac_in(session: Tssh_session): pchar; cdecl; external libssh;
function ssh_get_hmac_out(session: Tssh_session): pchar; cdecl; external libssh;
function ssh_buffer_new: Tssh_buffer; cdecl; external libssh;
procedure ssh_buffer_free(buffer: Tssh_buffer); cdecl; external libssh;
function ssh_buffer_reinit(buffer: Tssh_buffer): longint; cdecl; external libssh;
function ssh_buffer_add_data(buffer: Tssh_buffer; data: pointer; len: Tuint32_t): longint; cdecl; external libssh;
function ssh_buffer_get_data(buffer: Tssh_buffer; data: pointer; requestedlen: Tuint32_t): Tuint32_t; cdecl; external libssh;
function ssh_buffer_get(buffer: Tssh_buffer): pointer; cdecl; external libssh;
function ssh_buffer_get_len(buffer: Tssh_buffer): Tuint32_t; cdecl; external libssh;
function ssh_session_set_disconnect_message(session: Tssh_session; message: pchar): longint; cdecl; external libssh;

// === Konventiert am: 2-7-25 17:32:21 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}


{$ENDIF read_implementation}
